# Quantum-Transformer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo_quantum_transformer.py  demo_real_quantum.py  pyproject.toml  requirements.txt
docs/api/: reference.md
docs/theory/: advanced_theory.md  foundations.md
docs/tutorials/: advanced_topics.md  getting_started.md
experiments/ablation_studies/: ablation_runner.py
experiments/benchmarks/: benchmark_suite.py
experiments/configs/: default.yaml
experiments/molecular_datasets/: README.md  reference_energies.json
experiments/molecular_datasets/medium_molecules/: h2o.xyz
experiments/molecular_datasets/small_molecules/: h2.xyz  lih.xyz
notebooks/: 01_quantum_transformer_fundamentals.ipynb  02_molecular_prediction.ipynb  03_quantum_transformer_Deep_research.ipynb  quantum_transformer_complete_tutorial.ipynb
quantum_transformers/: __init__.py  cli.py
quantum_transformers/attention/: __init__.py  advanced_qmha.py  quantum_attention.py
quantum_transformers/circuits/: __init__.py  attention_circuits.py  measurements.py  variational.py
quantum_transformers/core/: __init__.py  quantum_transformer.py
quantum_transformers/encoding/: __init__.py  data.py  positional.py
quantum_transformers/layers/: __init__.py  connections.py  feedforward.py  normalization.py
quantum_transformers/molecular/: __init__.py  embeddings.py  tokenizer.py  transformer_model.py
quantum_transformers/optimization/: __init__.py  advanced_optimizers.py  gradient.py  noise_aware.py  optimizers.py  quantum_losses.py  schedulers.py
quantum_transformers/training/: __init__.py  fine_tuning.py
quantum_transformers/utils/: __init__.py  benchmarking.py  metrics.py  visualization.py
scripts/: run_benchmarks.sh  setup.sh
tests/: conftest.py  test_quantum_transformer.py
